# src/modules/accounts/dto/create-account.dto.ts
@@ -1,0 +1,14 @@
+import { Transform } from 'class-transformer';
+import { IsIn, IsNotEmpty, IsString } from 'class-validator';
+
+export class CreateAccountDto {
+  @Transform(({ value }: { value: unknown }) =>
+    typeof value === 'string' ? value.trim() : value,
+  )
+  @IsString()
+  @IsNotEmpty()
+  name: string;
+
+  @IsIn(['BRL'])
+  currency: string;
+}
